welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:33: error: too many arguments for method gauche: ()Unit
     gauche(2)
           ^SnakeBuggle:40: error: too many arguments for method droite: ()Unit
     droite(2)
           ^